# clipcontex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  jsconfig.json  package.json  tsconfig.json  vite.config.js
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  command.rs  commands.rs  config.rs  context.rs  core.rs  error.rs  lib.rs  main.rs  service.rs  state.rs  storage.rs  tauri.linux.conf.json
src-tauri/src/clipboard/: dedupe.rs  mod.rs  tests.rs  watcher.rs
src-tauri/src/context/: app_info.rs  auto_tag.rs  auto_tags.rs  linux.rs  mod.rs  normalize_app_name.rs  project.rs  tests.rs  windows.rs
src-tauri/src/context/auto_tags/: app_based.rs  content_based.rs
src-tauri/src/context/linux/: extract_project.rs  get_app_info.rs  mod.rs  wayland.rs
src-tauri/src/context/tests/: app_info_test.rs  auto_tag_test.rs  mod.rs  project_extraction_test.rs
src-tauri/src/context/windows/: win32.rs
src-tauri/src/core/: cleanup.rs  global_shortcut.rs  platform.rs  setup.rs  system_tray.rs  window_creation.rs
src-tauri/src/core/global_shortcut/: shortcut_handler.rs  shortcut_mapper.rs  shortcut_register.rs
src-tauri/src/service/: clip.rs  clips.rs  settings.rs  system.rs
src-tauri/src/storage/: clip.rs  clip_store.rs  mod.rs
src-tauri/src/storage/tests/: clip_store_test.rs  mod.rs
src/lib/components/: ClipItem.svelte  PinnedSection.svelte  SearchBar.svelte  TimelineSection.svelte
src/lib/components/UI/: Button.svelte
src/lib/components/main/: ClipItem.svelte  PinnedSection.svelte  SearchBar.svelte  TimelineSection.svelte
src/lib/components/onboarding/: FeatureItem.svelte
src/lib/components/settings/: AboutSettings.svelte  AboutUs.svelte  GeneralSettings.svelte  ShortcutInput.svelte
src/lib/services/: clip.ts  clips.js  clips.ts  settings.js  settings.ts  system.ts  theme.ts
src/lib/stores/: clips.js  theme.js  types.ts  uiPreference.ts
src/lib/utils/: shortcut.ts  toast.ts
src/routes/: +page.svelte
src/routes/onboarding/: +page.svelte  styles.css
src/routes/quick-picker/: +page.svelte
src/routes/settings/: +page.svelte  styles.css
static/: global.css  icon.icns
