[package]
name = "clipcontex"
version = "1.0.1"
description = "Your clipboard should remember what you were doing, not just what you copied."
authors = ["Abdul Kasif"]
edition = "2021"

[lib]
name = "clipcontex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["test", "tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version ="0.37.0", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.1"
tracing = "0.1.41"
dirs = "6.0.0"
tracing-subscriber = "0.3.20"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tempfile = "3.23.0"
tauri-plugin-autostart = "2.5.1"
tokio = {version = "1.48.0", features = ["full"] }
tauri-plugin-os = "2.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices"
] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
