[package]
name = "clipcontex"
version = "0.1.0"
description = "Your clipboard should remember what you were doing, not just what you copied."
authors = ["Abdul Kasif"]
edition = "2021"

[lib]
name = "clipcontex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["test", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version ="0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
regex = "1.12.4"
tracing = "0.1.44"
dirs = "6.0.0"
tracing-subscriber = "0.3.23"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tempfile = "3.27.0"
tauri-plugin-autostart = "2.5.1"
tokio = {version = "1.52.3", features = ["full"] }
tauri-plugin-os = "2.3.2"
anyhow = "1.0.103"
tauri-plugin-store = "2.4.3"
tauri-plugin-single-instance = "2.4.2"
active-win-pos-rs = "0.11.0"
mimalloc = "0.1.52"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices"
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
